# vetanatomy-3d

./: .env.example  .env.production.example  .gitignore  README.md  package.json  pnpm-lock.yaml  render.yaml  vercel.json
apps/api/: .dockerignore  Dockerfile  README.md  README_TESTING.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 0001_initial.py  0002_permissions.py  0003_add_refresh_tokens.py  0004_storage_and_dicom_files.py  0005_multispecies_domain.py  0006_attachment_file_data.py  0007_archive_patients.py  0008_clinical_reminders.py  0009_clinical_notes.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/v1/: api.py
apps/api/app/core/: config.py  rbac.py  security.py
apps/api/app/db/: database.py  session.py
apps/api/app/models/: __init__.py  admission.py  anatomical_annotation.py  attachment.py  audit_log.py  breed.py  clinical_note.py  clinical_reminder.py  dicom_series.py  dicom_study.py  hospital_room.py  imaging_finding.py  patient.py  permission.py  refresh_token.py  role.py  species.py  surgical_plan.py  tutor.py  user.py
apps/api/app/schemas/: annotation.py  attachment.py  clinical_note.py  imaging.py  patient.py  reminder.py  species.py  surgical_plan.py  user.py
apps/api/app/services/: __init__.py  auth_service.py  email_service.py  user_service.py
apps/api/app/tests/: conftest.py  test_auth.py  test_auth_cookie.py  test_auth_service.py  test_clinical_flow.py  test_password_reset.py  test_rbac.py  test_species_domain.py
apps/api/scripts/: seed.py
docs/: ARCHITECTURE.md  (+2 more)
(+58 files in other folders)
